--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <main class=container>
+      <section class="phoneimage">
+
+      </section>
+      <section class="signUpForm">
+
+      </section>
+    </main>
+
 
   </body>
 </html>
