Logo and slogan

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <body>
     <main class=container>
       <section class="phoneimage">
-
+        <img src="Images/phonebase.png" alt="">
       </section>
       <section class="signUpForm">
-
+        <header class="imageHeader">
+          <img src="Images/logo.png" alt="">
+        </header>
+        <p>Sign up to see photos and videos from your friends.</p>
       </section>
     </main>
 
