--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Instagram</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body>
     <main class=container>
@@ -15,6 +16,7 @@
           <img src="Images/logo.png" alt="">
         </header>
         <p>Sign up to see photos and videos from your friends.</p>
+        <a class="button" href="#"><i class="fab fa-facebook"></i> Log in with Facebook</a>
       </section>
     </main>
 
